fix: form validation and scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-border-radius: 15px;
+  background-color: #f0f1f5;
+  border-radius: 1px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 15px;
+  border-radius: 1px;
+  background: #838d8e;
+  /*-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);*/
+}
